# vending_machine

./: .gitignore  README.md
clean_architect/: CMakeLists.txt  README.md
clean_architect/src/: main.cpp
clean_architect/src/domain/common/: Money.hpp  Price.cpp
clean_architect/src/domain/interfaces/: IDispenser.hpp  IPaymentGateway.hpp
clean_architect/src/domain/inventory/: EligibleProduct.cpp  EligibleProduct.hpp  Inventory.hpp  ProductInfo.cpp  ProductSlot.hpp
clean_architect/src/domain/services/: PurchaseEligibilityService.hpp
clean_architect/src/frameworks_drivers/ui/: ConsoleUI.cpp  ConsoleUI.hpp
clean_architect/src/interface_adapters/controllers/: VendingMachineController.cpp  VendingMachineController.hpp
clean_architect/src/interface_adapters/gateways/adapters/: SimulatedCoinMech.hpp  SimulatedDispenser.hpp  SimulatedPaymentGateway.hpp
clean_architect/src/interface_adapters/gateways/repositories/: InMemoryTransactionHistoryRepository.cpp  InMemoryTransactionHistoryRepository.hpp
clean_architect/src/usecases/: CashCollectionUseCase.cpp  CashCollectionUseCase.hpp  InventoryRefillUseCase.cpp  InventoryRefillUseCase.hpp  PurchaseWithCashUseCase.cpp  PurchaseWithCashUseCase.hpp  PurchaseWithEMoneyUseCase.cpp  PurchaseWithEMoneyUseCase.hpp  SalesReportingUseCase.cpp  SalesReportingUseCase.hpp  VendingMachineApplication.cpp  VendingMachineApplication.hpp
clean_architect/src/usecases/dto/: PurchaseDTOs.hpp
clean_architect/test/: CMakeLists.txt
clean_architect/test/domain/common/: MoneyTest.cpp  PriceTest.cpp
clean_architect/test/domain/inventory/: InventoryTest.cpp  ProductInfoTest.cpp  ProductNameTest.cpp  SlotIdTest.cpp
clean_architect/test/domain/payment/: WalletTest.cpp
clean_architect/test/domain/sales/: SalesTest.cpp  SessionIdTest.cpp
clean_architect/test/domain/services/: PurchaseEligibilityServiceTest.cpp
clean_architect/test/usecases/: CashCollectionUseCaseTest.cpp  InventoryRefillUseCaseTest.cpp  PurchaseWithCashUseCaseTest.cpp  PurchaseWithEMoneyUseCaseTest.cpp  SalesReportingUseCaseTest.cpp
hexagonal_architect/: CMakeLists.txt  README.md
hexagonal_architect/src/: main.cpp
hexagonal_architect/src/adapters/outbound/: MockPaymentGateway.hpp
hexagonal_architect/src/application/: VendingMachineService.cpp  VendingMachineService.hpp
hexagonal_architect/src/domain/: Inventory.cpp  Inventory.hpp  Money.cpp  Money.hpp  Product.cpp  Product.hpp  VendingMachine.cpp  VendingMachine.hpp
hexagonal_architect/src/ports/inbound/: IMaintenanceService.hpp  IVendingMachineService.hpp
hexagonal_architect/src/ports/outbound/: IInventoryRepository.hpp  IPaymentGateway.hpp
hexagonal_architect/test/: CMakeLists.txt
hexagonal_architect/test/adapters/inbound/: ConsoleAdapterTest.cpp
hexagonal_architect/test/adapters/outbound/: InMemoryInventoryRepositoryTest.cpp
hexagonal_architect/test/application/: VendingMachineServiceTest.cpp
hexagonal_architect/test/domain/: InventoryTest.cpp  MoneyTest.cpp  ProductTest.cpp  VendingMachineExtendedTest.cpp  VendingMachineTest.cpp
layered_architect/: CMakeLists.txt  README.md
layered_architect/src/: main.cpp
layered_architect/src/application/: VendingMachineApplication.cpp  VendingMachineApplication.hpp
layered_architect/src/application/repositories/: ITransactionHistoryRepository.hpp
layered_architect/src/application/usecases/: CashCollectionUseCase.cpp  CashCollectionUseCase.hpp  PurchaseWithCashUseCase.cpp  PurchaseWithCashUseCase.hpp  PurchaseWithEMoneyUseCase.cpp  PurchaseWithEMoneyUseCase.hpp  SalesReportingUseCase.cpp  SalesReportingUseCase.hpp
layered_architect/src/domain/common/: Money.cpp  Price.hpp  Quantity.cpp
layered_architect/src/domain/interfaces/: ICoinMech.hpp  IDispenser.hpp  IPaymentGateway.hpp
layered_architect/src/domain/inventory/: ProductInfo.hpp  ProductName.cpp  ProductName.hpp  ProductSlot.cpp  SlotId.cpp
layered_architect/src/domain/payment/: Wallet.cpp
layered_architect/src/domain/sales/: Sales.cpp  Sales.hpp  SalesId.cpp  SalesId.hpp  SessionId.hpp  TransactionRecord.cpp  TransactionRecord.hpp  TransactionSession.hpp
layered_architect/src/domain/services/: PurchaseEligibilityService.cpp  PurchaseEligibilityService.hpp
layered_architect/src/infrastructure/adapters/: SimulatedCoinMech.hpp  SimulatedDispenser.hpp  SimulatedPaymentGateway.hpp
layered_architect/src/infrastructure/interfaces/: ICoinMech.hpp  IDispenser.hpp  IPaymentGateway.hpp  ITransactionHistoryRepository.hpp
layered_architect/src/infrastructure/repositories/: ITransactionHistoryRepository.hpp  InMemoryTransactionHistoryRepository.hpp
layered_architect/src/presentation/: ConsoleUI.cpp  ConsoleUI.hpp
layered_architect/test/: CMakeLists.txt
layered_architect/test/application/usecases/: CashCollectionUseCaseTest.cpp  InventoryRefillUseCaseTest.cpp  PurchaseWithCashUseCaseTest.cpp  PurchaseWithEMoneyUseCaseTest.cpp  SalesReportingUseCaseTest.cpp
layered_architect/test/domain/common/: PriceTest.cpp  QuantityTest.cpp
layered_architect/test/domain/inventory/: ProductInfoTest.cpp  ProductNameTest.cpp  ProductSlotTest.cpp
layered_architect/test/domain/payment/: WalletTest.cpp
layered_architect/test/domain/sales/: SalesIdTest.cpp  SalesTest.cpp  SessionIdTest.cpp  TransactionSessionTest.cpp
layered_architect/test/domain/services/: PurchaseEligibilityServiceTest.cpp
layered_architect/test/infrastructure/repositories/: InMemoryTransactionHistoryRepositoryTest.cpp
onion_architect/test/: CMakeLists.txt
onion_architect/test/application/usecases/: CashCollectionUseCaseTest.cpp  PurchaseWithCashUseCaseTest.cpp  PurchaseWithEMoneyUseCaseTest.cpp  SalesReportingUseCaseTest.cpp
onion_architect/test/domain/common/: MoneyTest.cpp  PriceTest.cpp  QuantityTest.cpp
onion_architect/test/domain/inventory/: InventoryTest.cpp  SlotIdTest.cpp
onion_architect/test/domain/sales/: TransactionSessionTest.cpp
onion_architect/test/domain/services/: PurchaseEligibilityServiceTest.cpp
onion_architect/test/infrastructure/repositories/: InMemoryTransactionHistoryRepositoryTest.cpp
(+36 files in other folders)
